crates/forge_services/src/tools/task/snapshots/forge_services__tools__task__task_prepend__tests__prepend_bulk_tasks.snap
---
source: crates/forge_services/src/tools/task/task_prepend.rs
expression: result
---
<task_list_result>
<message>3 tasks added to the beginning of the list.</message>
<stats>
<total_tasks>3</total_tasks>
<done_tasks>0</done_tasks>
<pending_tasks>3</pending_tasks>
<in_progress_tasks>0</in_progress_tasks>
</stats>
</task_list_result>
